--- a/lau-registry/src/main/resources/application.yml
+++ b/lau-registry/src/main/resources/application.yml
@@ -7,3 +7,5 @@ eureka:
   client:
     service-url:
       defaultZone: http://127.0.0.1:10010/eureka
+    register-with-eureka: false
+    fetch-registry: false
