--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
         <module>lau-gateway</module>
         <module>lau-item</module>
         <module>lau-common</module>
+        <module>lau-upload</module>
     </modules>
     <parent>
         <groupId>org.springframework.boot</groupId>
