--- a/lau-upload/pom.xml
+++ b/lau-upload/pom.xml
@@ -24,5 +24,10 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.lau1yach.common</groupId>
+            <artifactId>lau-common</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 </project>
